Fix CORS policy blocking Vercel frontend